Add change-alias and change-display-name handles
